--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,6 +1,6 @@
 workflows:
     sample-workflow:
-        name: Panda Catch
+        name: Panda Catch&Learn
         max_build_duration: 120
         instance_type: mac_mini_m1
         integrations:
@@ -50,4 +50,4 @@ workflows:
           app_store_connect:
             auth: integration
             submit_to_app_store: true
-            copyright: Panda Catch 2024
+            copyright: Panda Catch&Learn 2024
